1回目記述の追加

--- a/index.html
+++ b/index.html
@@ -7,8 +7,55 @@
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/style.css">
 </head>
-
 <body>
-    
+    <header class="header">
+        <h1 class="header__logo">
+            Profile
+        </h1>
+        <nav class="header__nav">
+            <ul>
+                <li><a href="#about">About</a></li>
+                <li><a href="#bicycle">Bicycle</a></li>
+            </ul>
+        </nav>
+    </header>
+    <main>
+        <div class="mainvisual">
+            <img src="img/mainvisual.jpg" alt="">
+        </div>
+        <section class="about" id="about">
+            <h2><span class="about__ttl">About</span></h2>
+            <div class="about__content">
+                <img src="img/about.jpg" alt="">
+                <div class="about__content-txt">
+                    <h3>KAKERU MIYAICHI</h3>
+                    <p>テキストテキストテキストテキストテキストテキストテキスト<br>テキストテキストテキストテキストテキストテキストテキスト<br>テキストテキストテキストテキストテキストテキストテキスト<br></p>
+                </div>
+            </div>
+        </section>
+        <section class="bicycle" id="bicycle">
+            <h2><span class="bicycle__ttl">Bicycle</span></h2>
+            <ul class="bicycle__card">
+                <li>
+                    <img src="img/bicycle1.jpg" alt="">
+                        <h3>タイトルタイトル</h3>
+                        <p>テキストテキストテキスト</p>
+                </li>
+                <li>
+                    <img src="img/bicycle2.jpg" alt="">
+                        <h3>タイトルタイトル</h3>
+                        <p>テキストテキストテキスト</p>
+                </li>
+                <li>
+                    <img src="img/bicycle3.jpg" alt="">
+                        <h3>タイトルタイトル</h3>
+                        <p>テキストテキストテキスト</p>
+                </li>
+            </ul>
+        </section>
+    </main>
+    <footer>
+        <small>&copy; 2020 Profile</small>
+    </footer>
 </body>
 </html>
